[tool.poetry]
name = "aws-cdk-excercise"
version = "0.1.0"
description = ""
authors = ["Michal Urbanczyk <michal.urbanczyk@grapeup.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "2.31.0"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
isort = "^5.13.2"
black = "^24.4.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = '''
/(
    \.git
  | \.hg
  | dist
  | cdk.out
  | .venv
  | node_modules
)/
'''
include = '\.pyi?$'

[tool.isort]
profile = "black"
skip_glob = ["**/__init__.py"]
line_length = 119
skip_gitignore = true
known_first_party = ["src"]
force_sort_within_sections = true